--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
 <header>
     <div class="contenedor-header">
         <div class="imagenlogo">
-            <img src="/img/logo-mercado-liebre.svg">
+            <img src="/img/logo-mercado-liebre.svg" width="360">
         </div>
         <div class="buscador">
             <form action="#" method="GET">
