--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,7 +57,10 @@ header {
   font-size: 90%;
 }
 .imagenlogo {
-  width: 50%;
+  width:50%;
+  align-items: center;
+  margin: 10px 0px 0px 10px;
+  display: flex;
 }
 header .form .input {
   background-color: #fff;
