--- a/views/login.html
+++ b/views/login.html
@@ -16,7 +16,7 @@
 <header>
     <div class="contenedor-header">
         <div class="imagenlogo">
-            <img src="/img/logo-mercado-liebre.svg">
+            <img src="/img/logo-mercado-liebre.svg" width="360">
         </div>
         <div class="buscador">
             <form action="#" method="GET">
