--- a/views/home.html
+++ b/views/home.html
@@ -27,7 +27,10 @@
             </form>
         </div>
     </div>
+    <div class="contenedor-titulo">
     <p class="titulo"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
+</div>
+    
 
 
     <nav>
@@ -43,6 +46,7 @@
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
+            </div>
     </nav>
     </div>
     <div class="menu-hamburguesa">
