--- a/views/register.html
+++ b/views/register.html
@@ -41,6 +41,7 @@
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
+        </div>
     </nav>
     </div>
     <div class="menu-hamburguesa">
